[tool.poetry]
name = "taskiq-matrix"
version = "0.1.0"
description = ""
authors = ["Mo Balaa <balaa@ether.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
taskiq = "^0.10.2"
matrix-nio = "^0.22.1"
nest-asyncio = "^1.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
